# Chat-SDK-for-E-commerce

./: README.md
ecommerce-support-agent/: README.md
ecommerce-support-agent/AI/ecommerce-support-agent/: README.md  pyproject.toml  requirements.txt
ecommerce-support-agent/AI/ecommerce-support-agent/src/: api.py  db.py  tools.py
ecommerce-support-agent/AI/ecommerce-support-agent/tests/: test_tools.py
ecommerce-support-agent/github-pages-site/: about.md
ecommerce-support-agent/github-pages-site-1/: README.md  _config.yml  index.html
ecommerce-support-agent/github-pages-site/docs/: README.md  index.html
