[tool]
name = "ecommerce-support-agent"
version = "0.1.0"
description = "A support agent for ecommerce functionalities."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
requests = "^2.25"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.7b0"
mypy = "^0.910"